<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_location">View location</string>
    <string name="title_activity_forecast_detail">forecastDetail</string>

    <string name="preferences_location_title">Location</string>
    <string name="preferences_location_key" translatable="false">location</string>
    <string name="preferences_location_value" translatable="false">Montevideo</string>
    <string name="preferences_unit_namesarray" translatable="false">unit_name_array</string>
    <string name="preferences_unit_valuessarray" translatable="false">unit_value_array</string>

    <string name="preferences_unit_title">Unit System</string>
    <string name="preferences_unit_system_key" translatable="false">unit</string>
    <string name="preferences_unit_system_value" translatable="false">metric</string>
    <string name="preferences_unit_metric_system_label">Metric System</string>
    <string name="preferences_unit_imperial_system_label">Imperial System</string>
    <string name="preferences_unit_metric_system_value" translatable="false">metric</string>
    <string name="preferences_unit_imperial_system_value" translatable="false">imperial</string>
    <string name="share_button_label">Share</string>


    <!-- Database names-->

    <string name="weatherDatabaseName">weather.db</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>


    <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
</resources>